Qt/6.10.0/Src/qtgrpc/tests/auto/grpcgen/data/cmake_generated/invalid-identifier/666-invalid-identifier_qtprotoreg.cpp

#include "666-invalid-identifier.qpb.h"

#include <QtProtobuf/qprotobufregistration.h>

static QtProtobuf::ProtoTypeRegistrar ProtoTypeRegistrarEmpty(qRegisterProtobufType<Empty>);
static bool Register_666_invalid_identifierProtobufTypes = [](){ qRegisterProtobufTypes(); return true; }();

